gitops/apps/base/product-service/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: product-system
  labels:
    istio.io/dataplane-mode: ambient
