gitops/apps/base/product-service/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: product-service
  namespace: product-system
spec:
  hosts:
    - "api.jarvisdev.io"
  gateways:
    - istio-system/microservices-ingress-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: product-service
            port:
              number: 8080
